# rest_admin_project

./: .Dockerfile.kate-swp  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/check_memory/: apps.py  views.py
apps/client/: apps.py  models.py  permissions.py  serializer.py  urls.py
apps/client/migrations/: 0001_initial.py
apps/weather_api/: apps.py  exceptions.py  urls.py  views.py
daemon/: memory_check_daemon.py
rest_project/: asgi.py  openapi-schema.yml  settings.py  swagger-ui.html  urls.py
rest_project/check_memory/: apps.py  urls.py  views.py
rest_project/client/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
rest_project/client/migrations/: 0001_initial.py  0002_alter_client_birth_date_alter_client_photo_and_more.py  0002_alter_client_photo.py  0003_alter_client_photo.py
rest_project/client/migrations/__vault__/: 0001_initial.py
rest_project/rest_project/: asgi.py  settings.py  urls.py
rest_project/users/: models.py  serializer.py  urls.py  views.py
rest_project/users/migrations/: 0001_initial.py  0002_alter_user_photo.py
rest_project/weather_api/: views.py
rest_project/weather_api/data/: cities.csv
